# vigilare

./: Cargo.toml  README.org  vigilare.service  wake-guard.service
src/: client.rs  daemon.rs  helper.rs  inhibitor.rs  main.rs  protocol.rs  signals.rs
